rustforge-contract-macros/tests/ui/fail_conflict_length.stderr
error: rf length(equal = ...) cannot be combined with min/max
 --> tests/ui/fail_conflict_length.rs:5:5
  |
5 |     #[rf(length(min = 1, equal = 3))]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
